--- a/styles.css
+++ b/styles.css
@@ -234,14 +234,15 @@ section {
     color: white;
 }
 @media (max-width: 768px) {
-    body{
+    html, body{
+        max-width: 100%;
         overflow-x: hidden;
-        margin: 0;
-        padding: 0;
     }
     .bgimage{
-        background-size: contain;
+        background-size: cover;
         height: 50vh;
+        background-position: center;
+        width: 100%;
     }
     .hero_title {
         font-size: 2.5rem;
@@ -272,11 +273,13 @@ section {
         margin-bottom: 15px;
     }
     .navbar {
-        padding: 0.5em;
+        width: 100%;
+        overflow: hidden;
     }
     .navbar-collapse {
         background:#22263d;
         padding: 10px;
+        width: 100%;
     }
     .navbar-nav {
         text-align: center;
@@ -288,5 +291,9 @@ section {
         width: 60px;
         height: 60px;
     }
+    .container, .row, .col-md-6, .col-md-12 {
+    max-width: 100%;
+}
+
 
 }
