--- a/styles.css
+++ b/styles.css
@@ -234,15 +234,9 @@ section {
     color: white;
 }
 @media (max-width: 768px) {
-    html, body{
-        max-width: 100%;
-        overflow-x: hidden;
-    }
     .bgimage{
-        background-size: cover;
-        height: 50vh;
-        background-position: center;
-        width: 100%;
+        background-size: contain;
+        height: 75vh;
     }
     .hero_title {
         font-size: 2.5rem;
@@ -273,13 +267,11 @@ section {
         margin-bottom: 15px;
     }
     .navbar {
-        width: 100%;
-        overflow: hidden;
+        padding: 0.5em;
     }
     .navbar-collapse {
         background:#22263d;
         padding: 10px;
-        width: 100%;
     }
     .navbar-nav {
         text-align: center;
@@ -291,8 +283,6 @@ section {
         width: 60px;
         height: 60px;
     }
-    .container, .row, .col-md-6, .col-md-12 {
-    max-width: 100%;
 }
 
 
