--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,7 @@ section {
         color: #a99cb1;
     }
     .hero-text .btn{
-        margin: 0 10px;
+        margin: 2px 5px;
         background-color: #b0a8b4;
         color: #1b1b32;
     }
